// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Messages > A message is removed if the modal is closed 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 500;
  margin: 0 auto;
}

<body
  data-scroll-lock=""
  style="overflow: hidden; padding-right: 1024px;"
>
  <div>
    <div
      class="emotion-0"
    >
      <div
        class="pos_fixed h_100vh w_100vw z_overlay left_0 top_0 bg_rgba(1,_1,_1,_0.3) open:anim_backdrop-in open:motionReduce:anim_none closed:anim_backdrop-out closed:motionReduce:anim_none"
        data-part="backdrop"
        data-scope="dialog"
        data-state="open"
        dir="ltr"
        id="dialog::r3::backdrop"
      />
      <div
        class="pos_fixed d_flex ai_center jc_center ov_hidden left_0 top_0 w_100vw h_100dvh z_modal"
        data-part="positioner"
        data-scope="dialog"
        dir="ltr"
        id="dialog::r3::positioner"
      >
        <div
          aria-describedby="dialog::r3::description"
          aria-label="Pass på!"
          aria-modal="true"
          class="--margin_token(sizes.medium) pos_relative bg_surface.default bx-sh_xlarge h_min-content max-w_95% max-h_95% m_auto ov-y_auto bdr_xsmall pbs_env(safe-area-inset-top) pbe_env(safe-area-inset-bottom) ps_env(safe-area-inset-left) pe_env(safe-area-inset-right) tabletDown:--margin_0px tabletDown:min-w_100% tabletDown:min-h_100% --size_sizes.surface.xlarge w_var(--size) open:anim_dialog-in open:motionReduce:anim_none closed:anim_dialog-out closed:motionReduce:anim_none"
          data-part="content"
          data-scope="dialog"
          data-state="open"
          data-testid="alert-dialog"
          dir="ltr"
          id="dialog::r3::content"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="d_flex px_medium pbs_medium jc_space-between ai_center gap_xsmall"
          >
            <h1
              class="textStyle_title.medium"
              data-part="title"
              data-scope="dialog"
              dir="ltr"
              id="dialog::r3::title"
            >
              Pass på!
            </h1>
            <button
              aria-label="Lukk"
              class="d_inline-flex ai_center jc_center gap_xxsmall cursor_pointer td_none fw_bold trs-prop_all trs-dur_fast trs-tmf_default ta_center bdr_xsmall ring_none bx-sh-c_stroke.default disabled:cursor_not-allowed disabled:c_text.onAction disabled:bg_surface.disabled disabled:bx-sh-c_surface.disabled disabled:[&_svg]:c_text.onAction disabled:hover:c_text.onAction disabled:hover:bg_surface.disabled focusVisible:bx-sh_inset_0_0_0_var(--shadow-width,_3px)_var(--shadow-color) motionReduce:trs_none motionReduce:trs-dur_0s bg_transparent c_text.strong hover:c_stroke.hover lh_1 min-h_unset --shadow-width_3px h_xxlarge w_xxlarge [&_svg]:mx_0 [&_svg]:my_0 [&_svg]:w_medium [&_svg]:h_medium px_xsmall py_xsmall"
              data-part="close-trigger"
              data-scope="dialog"
              data-testid="closeAlert"
              dir="ltr"
              id="dialog::r3::close"
              title="Lukk"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium"
                data-icon=""
                data-license="Apache License 2.0"
                data-source="Material Design"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.4 17.6 5 12 10.6 6.4 5 5 6.4l5.6 5.6L5 17.6 6.4 19l5.6-5.6 5.6 5.6 1.4-1.4-5.6-5.6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </button>
          </div>
          <div
            class="d_flex flex-d_column gap_xsmall px_medium pbs_small pbe_medium"
          >
            <div
              class="d_flex ai_flex-start gap_small p_medium bd_1px_solid bdr_xsmall bg_surface.errorSubtle bd-c_stroke.error flex-d_column"
            >
              <div
                class="d_flex ai_center gap_medium flex-d_row"
              >
                <svg
                  aria-hidden="true"
                  class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium"
                  data-icon=""
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M11 15h2v2h-2zm0-8h2v6h-2zm1-5a10 10 0 1 0 0 20 10 10 0 0 0 0-20m0 18a8 8 0 1 1 0-16 8 8 0 0 1 0 16"
                  />
                </svg>
                <p
                  class="textStyle_body.medium"
                >
                  Testmessage
                </p>
              </div>
            </div>
          </div>
          <div
            class="d_flex gap_3xsmall ai_center jc_flex-end px_medium pbs_small pbe_medium"
          >
            <div
              class="w_100% d_flex jc_space-between mbs_xsmall"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Messages > A message is removed if the modal is closed 2`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 500;
  margin: 0 auto;
  display: none;
}

<body>
  <div>
    <div
      class="emotion-0"
    />
  </div>
</body>
`;

exports[`Messages > A single message renders correctly 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 500;
  margin: 0 auto;
}

<body
  data-scroll-lock=""
  style="overflow: hidden; padding-right: 1024px;"
>
  <div>
    <div
      class="emotion-0"
    >
      <div
        class="pos_fixed h_100vh w_100vw z_overlay left_0 top_0 bg_rgba(1,_1,_1,_0.3) open:anim_backdrop-in open:motionReduce:anim_none closed:anim_backdrop-out closed:motionReduce:anim_none"
        data-part="backdrop"
        data-scope="dialog"
        data-state="open"
        dir="ltr"
        id="dialog::r0::backdrop"
      />
      <div
        class="pos_fixed d_flex ai_center jc_center ov_hidden left_0 top_0 w_100vw h_100dvh z_modal"
        data-part="positioner"
        data-scope="dialog"
        dir="ltr"
        id="dialog::r0::positioner"
      >
        <div
          aria-describedby="dialog::r0::description"
          aria-label="Pass på!"
          aria-modal="true"
          class="--margin_token(sizes.medium) pos_relative bg_surface.default bx-sh_xlarge h_min-content max-w_95% max-h_95% m_auto ov-y_auto bdr_xsmall pbs_env(safe-area-inset-top) pbe_env(safe-area-inset-bottom) ps_env(safe-area-inset-left) pe_env(safe-area-inset-right) tabletDown:--margin_0px tabletDown:min-w_100% tabletDown:min-h_100% --size_sizes.surface.xlarge w_var(--size) open:anim_dialog-in open:motionReduce:anim_none closed:anim_dialog-out closed:motionReduce:anim_none"
          data-part="content"
          data-scope="dialog"
          data-state="open"
          data-testid="alert-dialog"
          dir="ltr"
          id="dialog::r0::content"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="d_flex px_medium pbs_medium jc_space-between ai_center gap_xsmall"
          >
            <h1
              class="textStyle_title.medium"
              data-part="title"
              data-scope="dialog"
              dir="ltr"
              id="dialog::r0::title"
            >
              Pass på!
            </h1>
            <button
              aria-label="Lukk"
              class="d_inline-flex ai_center jc_center gap_xxsmall cursor_pointer td_none fw_bold trs-prop_all trs-dur_fast trs-tmf_default ta_center bdr_xsmall ring_none bx-sh-c_stroke.default disabled:cursor_not-allowed disabled:c_text.onAction disabled:bg_surface.disabled disabled:bx-sh-c_surface.disabled disabled:[&_svg]:c_text.onAction disabled:hover:c_text.onAction disabled:hover:bg_surface.disabled focusVisible:bx-sh_inset_0_0_0_var(--shadow-width,_3px)_var(--shadow-color) motionReduce:trs_none motionReduce:trs-dur_0s bg_transparent c_text.strong hover:c_stroke.hover lh_1 min-h_unset --shadow-width_3px h_xxlarge w_xxlarge [&_svg]:mx_0 [&_svg]:my_0 [&_svg]:w_medium [&_svg]:h_medium px_xsmall py_xsmall"
              data-part="close-trigger"
              data-scope="dialog"
              data-testid="closeAlert"
              dir="ltr"
              id="dialog::r0::close"
              title="Lukk"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium"
                data-icon=""
                data-license="Apache License 2.0"
                data-source="Material Design"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.4 17.6 5 12 10.6 6.4 5 5 6.4l5.6 5.6L5 17.6 6.4 19l5.6-5.6 5.6 5.6 1.4-1.4-5.6-5.6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </button>
          </div>
          <div
            class="d_flex flex-d_column gap_xsmall px_medium pbs_small pbe_medium"
          >
            <div
              class="d_flex ai_flex-start gap_small p_medium bd_1px_solid bdr_xsmall bg_surface.errorSubtle bd-c_stroke.error flex-d_column"
            >
              <div
                class="d_flex ai_center gap_medium flex-d_row"
              >
                <svg
                  aria-hidden="true"
                  class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium"
                  data-icon=""
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M11 15h2v2h-2zm0-8h2v6h-2zm1-5a10 10 0 1 0 0 20 10 10 0 0 0 0-20m0 18a8 8 0 1 1 0-16 8 8 0 0 1 0 16"
                  />
                </svg>
                <p
                  class="textStyle_body.medium"
                >
                  Testmessage
                </p>
              </div>
            </div>
          </div>
          <div
            class="d_flex gap_3xsmall ai_center jc_flex-end px_medium pbs_small pbe_medium"
          >
            <div
              class="w_100% d_flex jc_space-between mbs_xsmall"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Messages > Several messages renders correctly 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 500;
  margin: 0 auto;
}

<body
  data-scroll-lock=""
  style="overflow: hidden; padding-right: 1024px;"
>
  <div>
    <div
      class="emotion-0"
    >
      <div
        class="pos_fixed h_100vh w_100vw z_overlay left_0 top_0 bg_rgba(1,_1,_1,_0.3) open:anim_backdrop-in open:motionReduce:anim_none closed:anim_backdrop-out closed:motionReduce:anim_none"
        data-part="backdrop"
        data-scope="dialog"
        data-state="open"
        dir="ltr"
        id="dialog::r1::backdrop"
      />
      <div
        class="pos_fixed d_flex ai_center jc_center ov_hidden left_0 top_0 w_100vw h_100dvh z_modal"
        data-part="positioner"
        data-scope="dialog"
        dir="ltr"
        id="dialog::r1::positioner"
      >
        <div
          aria-describedby="dialog::r1::description"
          aria-label="Pass på!"
          aria-modal="true"
          class="--margin_token(sizes.medium) pos_relative bg_surface.default bx-sh_xlarge h_min-content max-w_95% max-h_95% m_auto ov-y_auto bdr_xsmall pbs_env(safe-area-inset-top) pbe_env(safe-area-inset-bottom) ps_env(safe-area-inset-left) pe_env(safe-area-inset-right) tabletDown:--margin_0px tabletDown:min-w_100% tabletDown:min-h_100% --size_sizes.surface.xlarge w_var(--size) open:anim_dialog-in open:motionReduce:anim_none closed:anim_dialog-out closed:motionReduce:anim_none"
          data-part="content"
          data-scope="dialog"
          data-state="open"
          data-testid="alert-dialog"
          dir="ltr"
          id="dialog::r1::content"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="d_flex px_medium pbs_medium jc_space-between ai_center gap_xsmall"
          >
            <h1
              class="textStyle_title.medium"
              data-part="title"
              data-scope="dialog"
              dir="ltr"
              id="dialog::r1::title"
            >
              Pass på!
            </h1>
            <button
              aria-label="Lukk"
              class="d_inline-flex ai_center jc_center gap_xxsmall cursor_pointer td_none fw_bold trs-prop_all trs-dur_fast trs-tmf_default ta_center bdr_xsmall ring_none bx-sh-c_stroke.default disabled:cursor_not-allowed disabled:c_text.onAction disabled:bg_surface.disabled disabled:bx-sh-c_surface.disabled disabled:[&_svg]:c_text.onAction disabled:hover:c_text.onAction disabled:hover:bg_surface.disabled focusVisible:bx-sh_inset_0_0_0_var(--shadow-width,_3px)_var(--shadow-color) motionReduce:trs_none motionReduce:trs-dur_0s bg_transparent c_text.strong hover:c_stroke.hover lh_1 min-h_unset --shadow-width_3px h_xxlarge w_xxlarge [&_svg]:mx_0 [&_svg]:my_0 [&_svg]:w_medium [&_svg]:h_medium px_xsmall py_xsmall"
              data-part="close-trigger"
              data-scope="dialog"
              data-testid="closeAlert"
              dir="ltr"
              id="dialog::r1::close"
              title="Lukk"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium"
                data-icon=""
                data-license="Apache License 2.0"
                data-source="Material Design"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.4 17.6 5 12 10.6 6.4 5 5 6.4l5.6 5.6L5 17.6 6.4 19l5.6-5.6 5.6 5.6 1.4-1.4-5.6-5.6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </button>
          </div>
          <div
            class="d_flex flex-d_column gap_xsmall px_medium pbs_small pbe_medium"
          >
            <div
              class="d_flex ai_flex-start gap_small p_medium bd_1px_solid bdr_xsmall bg_surface.errorSubtle bd-c_stroke.error flex-d_column"
            >
              <div
                class="d_flex ai_center gap_medium flex-d_row"
              >
                <svg
                  aria-hidden="true"
                  class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium"
                  data-icon=""
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M11 15h2v2h-2zm0-8h2v6h-2zm1-5a10 10 0 1 0 0 20 10 10 0 0 0 0-20m0 18a8 8 0 1 1 0-16 8 8 0 0 1 0 16"
                  />
                </svg>
                <p
                  class="textStyle_body.medium"
                >
                  Testmessage
                </p>
              </div>
            </div>
          </div>
          <div
            class="d_flex gap_3xsmall ai_center jc_flex-end px_medium pbs_small pbe_medium"
          >
            <div
              class="w_100% d_flex jc_space-between mbs_xsmall"
            />
          </div>
        </div>
      </div>
      <div
        class="pos_fixed h_100vh w_100vw z_overlay left_0 top_0 bg_rgba(1,_1,_1,_0.3) open:anim_backdrop-in open:motionReduce:anim_none closed:anim_backdrop-out closed:motionReduce:anim_none"
        data-part="backdrop"
        data-scope="dialog"
        data-state="open"
        dir="ltr"
        id="dialog::r2::backdrop"
      />
      <div
        class="pos_fixed d_flex ai_center jc_center ov_hidden left_0 top_0 w_100vw h_100dvh z_modal"
        data-part="positioner"
        data-scope="dialog"
        dir="ltr"
        id="dialog::r2::positioner"
      >
        <div
          aria-describedby="dialog::r2::description"
          aria-label="Pass på!"
          aria-modal="true"
          class="--margin_token(sizes.medium) pos_relative bg_surface.default bx-sh_xlarge h_min-content max-w_95% max-h_95% m_auto ov-y_auto bdr_xsmall pbs_env(safe-area-inset-top) pbe_env(safe-area-inset-bottom) ps_env(safe-area-inset-left) pe_env(safe-area-inset-right) tabletDown:--margin_0px tabletDown:min-w_100% tabletDown:min-h_100% --size_sizes.surface.xlarge w_var(--size) open:anim_dialog-in open:motionReduce:anim_none closed:anim_dialog-out closed:motionReduce:anim_none"
          data-part="content"
          data-scope="dialog"
          data-state="open"
          data-testid="alert-dialog"
          dir="ltr"
          id="dialog::r2::content"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="d_flex px_medium pbs_medium jc_space-between ai_center gap_xsmall"
          >
            <h1
              class="textStyle_title.medium"
              data-part="title"
              data-scope="dialog"
              dir="ltr"
              id="dialog::r2::title"
            >
              Pass på!
            </h1>
            <button
              aria-label="Lukk"
              class="d_inline-flex ai_center jc_center gap_xxsmall cursor_pointer td_none fw_bold trs-prop_all trs-dur_fast trs-tmf_default ta_center bdr_xsmall ring_none bx-sh-c_stroke.default disabled:cursor_not-allowed disabled:c_text.onAction disabled:bg_surface.disabled disabled:bx-sh-c_surface.disabled disabled:[&_svg]:c_text.onAction disabled:hover:c_text.onAction disabled:hover:bg_surface.disabled focusVisible:bx-sh_inset_0_0_0_var(--shadow-width,_3px)_var(--shadow-color) motionReduce:trs_none motionReduce:trs-dur_0s bg_transparent c_text.strong hover:c_stroke.hover lh_1 min-h_unset --shadow-width_3px h_xxlarge w_xxlarge [&_svg]:mx_0 [&_svg]:my_0 [&_svg]:w_medium [&_svg]:h_medium px_xsmall py_xsmall"
              data-part="close-trigger"
              data-scope="dialog"
              data-testid="closeAlert"
              dir="ltr"
              id="dialog::r2::close"
              title="Lukk"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium"
                data-icon=""
                data-license="Apache License 2.0"
                data-source="Material Design"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.4 17.6 5 12 10.6 6.4 5 5 6.4l5.6 5.6L5 17.6 6.4 19l5.6-5.6 5.6 5.6 1.4-1.4-5.6-5.6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </button>
          </div>
          <div
            class="d_flex flex-d_column gap_xsmall px_medium pbs_small pbe_medium"
          >
            <div
              class="d_flex ai_flex-start gap_small p_medium bd_1px_solid bdr_xsmall bg_surface.errorSubtle bd-c_stroke.error flex-d_column"
            >
              <div
                class="d_flex ai_center gap_medium flex-d_row"
              >
                <svg
                  aria-hidden="true"
                  class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium"
                  data-icon=""
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M11 15h2v2h-2zm0-8h2v6h-2zm1-5a10 10 0 1 0 0 20 10 10 0 0 0 0-20m0 18a8 8 0 1 1 0-16 8 8 0 0 1 0 16"
                  />
                </svg>
                <p
                  class="textStyle_body.medium"
                >
                  Testmessage2
                </p>
              </div>
            </div>
          </div>
          <div
            class="d_flex gap_3xsmall ai_center jc_flex-end px_medium pbs_small pbe_medium"
          >
            <div
              class="w_100% d_flex jc_space-between mbs_xsmall"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Messages > auth0 messages provides a cancel button 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 500;
  margin: 0 auto;
}

<body
  data-scroll-lock=""
  style="overflow: hidden; padding-right: 1024px;"
>
  <div>
    <div
      class="emotion-0"
    >
      <div
        class="pos_fixed h_100vh w_100vw z_overlay left_0 top_0 bg_rgba(1,_1,_1,_0.3) open:anim_backdrop-in open:motionReduce:anim_none closed:anim_backdrop-out closed:motionReduce:anim_none"
        data-part="backdrop"
        data-scope="dialog"
        data-state="open"
        dir="ltr"
        id="dialog::r4::backdrop"
      />
      <div
        class="pos_fixed d_flex ai_center jc_center ov_hidden left_0 top_0 w_100vw h_100dvh z_modal"
        data-part="positioner"
        data-scope="dialog"
        dir="ltr"
        id="dialog::r4::positioner"
      >
        <div
          aria-describedby="dialog::r4::description"
          aria-label="Pass på!"
          aria-modal="true"
          class="--margin_token(sizes.medium) pos_relative bg_surface.default bx-sh_xlarge h_min-content max-w_95% max-h_95% m_auto ov-y_auto bdr_xsmall pbs_env(safe-area-inset-top) pbe_env(safe-area-inset-bottom) ps_env(safe-area-inset-left) pe_env(safe-area-inset-right) tabletDown:--margin_0px tabletDown:min-w_100% tabletDown:min-h_100% --size_sizes.surface.xlarge w_var(--size) open:anim_dialog-in open:motionReduce:anim_none closed:anim_dialog-out closed:motionReduce:anim_none"
          data-part="content"
          data-scope="dialog"
          data-state="open"
          data-testid="alert-dialog"
          dir="ltr"
          id="dialog::r4::content"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="d_flex px_medium pbs_medium jc_space-between ai_center gap_xsmall"
          >
            <h1
              class="textStyle_title.medium"
              data-part="title"
              data-scope="dialog"
              dir="ltr"
              id="dialog::r4::title"
            >
              Pass på!
            </h1>
            <button
              aria-label="Lukk"
              class="d_inline-flex ai_center jc_center gap_xxsmall cursor_pointer td_none fw_bold trs-prop_all trs-dur_fast trs-tmf_default ta_center bdr_xsmall ring_none bx-sh-c_stroke.default disabled:cursor_not-allowed disabled:c_text.onAction disabled:bg_surface.disabled disabled:bx-sh-c_surface.disabled disabled:[&_svg]:c_text.onAction disabled:hover:c_text.onAction disabled:hover:bg_surface.disabled focusVisible:bx-sh_inset_0_0_0_var(--shadow-width,_3px)_var(--shadow-color) motionReduce:trs_none motionReduce:trs-dur_0s bg_transparent c_text.strong hover:c_stroke.hover lh_1 min-h_unset --shadow-width_3px h_xxlarge w_xxlarge [&_svg]:mx_0 [&_svg]:my_0 [&_svg]:w_medium [&_svg]:h_medium px_xsmall py_xsmall"
              data-part="close-trigger"
              data-scope="dialog"
              data-testid="closeAlert"
              dir="ltr"
              id="dialog::r4::close"
              title="Lukk"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium"
                data-icon=""
                data-license="Apache License 2.0"
                data-source="Material Design"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.4 17.6 5 12 10.6 6.4 5 5 6.4l5.6 5.6L5 17.6 6.4 19l5.6-5.6 5.6 5.6 1.4-1.4-5.6-5.6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </button>
          </div>
          <div
            class="d_flex flex-d_column gap_xsmall px_medium pbs_small pbe_medium"
          >
            <div
              class="d_flex ai_flex-start gap_small p_medium bd_1px_solid bdr_xsmall bg_surface.errorSubtle bd-c_stroke.error flex-d_column"
            >
              <div
                class="d_flex ai_center gap_medium flex-d_row"
              >
                <svg
                  aria-hidden="true"
                  class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium"
                  data-icon=""
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M11 15h2v2h-2zm0-8h2v6h-2zm1-5a10 10 0 1 0 0 20 10 10 0 0 0 0-20m0 18a8 8 0 1 1 0-16 8 8 0 0 1 0 16"
                  />
                </svg>
                <p
                  class="textStyle_body.medium"
                >
                  Testmessage
                </p>
              </div>
            </div>
          </div>
          <div
            class="d_flex gap_3xsmall ai_center jc_flex-end px_medium pbs_small pbe_medium"
          >
            <div
              class="w_100% d_flex jc_space-between mbs_xsmall"
            >
              <button
                class="d_inline-flex ai_center jc_center gap_xxsmall cursor_pointer td_none fw_bold trs-prop_all trs-dur_fast trs-tmf_default ta_center bdr_xsmall ring_none bx-sh-c_stroke.default disabled:cursor_not-allowed disabled:c_text.onAction disabled:bg_surface.disabled disabled:bx-sh-c_surface.disabled disabled:[&_svg]:c_text.onAction disabled:hover:c_text.onAction disabled:hover:bg_surface.disabled focusVisible:bx-sh_inset_0_0_0_var(--shadow-width,_3px)_var(--shadow-color),_inset_0px_0px_0px_calc(var(--shadow-width,_3px)_*_2)_currentcolor motionReduce:trs_none motionReduce:trs-dur_0s c_text.onAction bg_surface.action hover:c_text.onAction hover:bg_surface.action.hover active:c_text.onAction active:bg_surface.action.active textStyle_label.medium px_small py_xxsmall min-h_24 [&_svg]:mx_0 [&_svg]:my_0 [&_svg]:w_medium [&_svg]:h_medium"
                type="button"
              >
                Avbryt
              </button>
              <button
                class="d_inline-flex ai_center jc_center gap_xxsmall cursor_pointer td_none fw_bold trs-prop_all trs-dur_fast trs-tmf_default ta_center bdr_xsmall ring_none bx-sh-c_stroke.default disabled:cursor_not-allowed disabled:c_text.onAction disabled:bg_surface.disabled disabled:bx-sh-c_surface.disabled disabled:[&_svg]:c_text.onAction disabled:hover:c_text.onAction disabled:hover:bg_surface.disabled focusVisible:bx-sh_inset_0_0_0_var(--shadow-width,_3px)_var(--shadow-color),_inset_0px_0px_0px_calc(var(--shadow-width,_3px)_*_2)_currentcolor motionReduce:trs_none motionReduce:trs-dur_0s c_text.onAction bg_surface.action hover:c_text.onAction hover:bg_surface.action.hover active:c_text.onAction active:bg_surface.action.active textStyle_label.medium px_small py_xxsmall min-h_24 [&_svg]:mx_0 [&_svg]:my_0 [&_svg]:w_medium [&_svg]:h_medium"
                type="button"
              >
                Logg inn på nytt
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Messages > auth0 messages provides a cancel button 2`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 500;
  margin: 0 auto;
  display: none;
}

<body
  style=""
>
  <div>
    <div
      class="emotion-0"
    />
  </div>
</body>
`;
